test/invalid/TestPower/TestPower.plume
/**
 * Class to test the Fibonacci class
 * @author 35237, Marcos Vasco
 *
 * De certeza que esta classe pertence a bateria de validos? (vv)
 */
class TestPower extends Object is

	new Power(2,3).calculate()
	// expected output: "8"